<resources>
    <string name="app_name">AdoptMe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="pets">Pets</string>
    <string name="pets_map">Pets map</string>
    <string name="compose">Post Pet</string>
    <string name="log_out">Log out</string>
    <string name="pet_photo">Pet photo</string>
    <string name="preferences">Preferences</string>
    <string name="value">Value</string>
    <string name="save">Save</string>
    <string name="test">test</string>
    <string name="likes">%d likes</string>
    <string name="like_button">Like button</string>
    <string name="description">Description</string>
    <string name="breed">Breed</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="upload_image">Upload image</string>
    <string name="submit">Submit</string>
    <string name="load_more">Load More</string>
</resources>