<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pet_photo"
            android:layout_width="228dp"
            android:layout_height="254dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/pet_photo"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/pet_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="16dp"
            android:text="@string/likes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pet_photo" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="365dp"
            android:layout_height="98dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pet_likes"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.chip.Chip
                android:id="@+id/pet_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/test" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pet_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/test" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pet_breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/test" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pet_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/test" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/test" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pet_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/test" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pet_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/test" />

        </com.google.android.material.chip.ChipGroup>


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="224dp"
            android:layout_height="187dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pet_description" />

        <TextView
            android:id="@+id/pet_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <TextView
            android:id="@+id/contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="52dp"
            android:text="@string/test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/map"
            app:layout_constraintTop_toBottomOf="@+id/contact_phone" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="284dp"
            android:text="@string/test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/map"
            app:layout_constraintTop_toBottomOf="@+id/pet_photo" />

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/like_button"
            android:src="@drawable/heart_outline"
            app:layout_constraintEnd_toStartOf="@+id/pet_likes"
            app:layout_constraintTop_toBottomOf="@+id/pet_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
